Задача "News Feed" BJS2-55795
code corrections